tests/stderr-snapshots/integration__integration__general__local_string.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: non-const string variable
   ┌─ <input>:28:9
   │
28 │         string x = "hi";
   │         ^^^^^^ only possible for const vars


